--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
+requests = "^2.32.3"
+psycopg2 = "^2.9.10"
+python-dotenv = "^1.0.1"
 
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.15.0"
+isort = "^6.0.1"
+black = "^25.1.0"
+flake8 = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core"]
